--- a/src/services/Gcp.PubSub.Poc/Gcp.PubSub.Poc/Gcp.PubSub.Poc.csproj
+++ b/src/services/Gcp.PubSub.Poc/Gcp.PubSub.Poc/Gcp.PubSub.Poc.csproj
@@ -8,6 +8,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="Google.Cloud.PubSub.V1" Version="3.12.0" />
       <PackageReference Include="Microsoft.Extensions.Configuration" Version="8.0.0" />
       <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="8.0.1" />
       <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="8.0.0" />
