--- a/src/services/Gcp.PubSub.Poc.Producer/Gcp.PubSub.Poc.Producer.csproj
+++ b/src/services/Gcp.PubSub.Poc.Producer/Gcp.PubSub.Poc.Producer.csproj
@@ -5,6 +5,7 @@
         <TargetFramework>net8.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
+        <RootNamespace>Gcp.PubSub.Poc.Producer</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
