--- a/src/services/Gcp.PubSub.Poc.Producer/Properties/launchSettings.json
+++ b/src/services/Gcp.PubSub.Poc.Producer/Properties/launchSettings.json
@@ -5,7 +5,9 @@
       "commandName": "Project",
       "environmentVariables": {
         "PUBSUB_EMULATOR_HOST": "localhost:8085",
-        "PUBSUB_PROJECT_ID": "lets-have-some-fun"
+        "PUBSUB_PROJECT_ID": "test-project",
+        "PUBSUB_TOPIC_ID": "test-topic",
+        "PUBSUB_SUBSCRIPTION_ID": "test-subscription"
       }
     }
   }
