fix: 新增  V3 版本 Producer

--- a/src/services/Gcp.PubSub.Poc.Consumer/Gcp.PubSub.Poc.Consumer.csproj
+++ b/src/services/Gcp.PubSub.Poc.Consumer/Gcp.PubSub.Poc.Consumer.csproj
@@ -30,6 +30,9 @@
       <None Update="Properties\launchSettings.json">
         <CopyToOutputDirectory>Never</CopyToOutputDirectory>
       </None>
+      <None Update="appsettings.Local.json">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
     </ItemGroup>
 
 </Project>
