--- a/src/services/Gcp.PubSub.Poc.Producer/Gcp.PubSub.Poc.Producer.csproj
+++ b/src/services/Gcp.PubSub.Poc.Producer/Gcp.PubSub.Poc.Producer.csproj
@@ -31,6 +31,9 @@
       <None Update="Properties\launchSettings.json">
         <CopyToOutputDirectory>Never</CopyToOutputDirectory>
       </None>
+      <None Update="appsettings.Local.json">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
     </ItemGroup>
 
 </Project>
