--- a/src/services/Gcp.PubSub.Poc.Consumer/Gcp.PubSub.Poc.Consumer.csproj
+++ b/src/services/Gcp.PubSub.Poc.Consumer/Gcp.PubSub.Poc.Consumer.csproj
@@ -8,6 +8,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="CommandLineParser" Version="2.9.1" />
       <PackageReference Include="Google.Cloud.PubSub.V1" Version="3.13.0" />
       <PackageReference Include="Microsoft.Extensions.Configuration" Version="8.0.0" />
       <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="8.0.0" />
