--- a/src/services/Gcp.PubSub.Poc.Producer/Gcp.PubSub.Poc.Producer.csproj
+++ b/src/services/Gcp.PubSub.Poc.Producer/Gcp.PubSub.Poc.Producer.csproj
@@ -9,6 +9,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="CommandLineParser" Version="2.9.1" />
       <PackageReference Include="Google.Cloud.PubSub.V1" Version="3.13.0" />
       <PackageReference Include="Microsoft.Extensions.Configuration" Version="8.0.0" />
       <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="8.0.0" />
@@ -21,6 +22,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\Gcp.PubSub.Poc.Domain\Gcp.PubSub.Poc.Domain.csproj" />
       <ProjectReference Include="..\Gcp.PubSub.Poc\Gcp.PubSub.Poc.csproj" />
     </ItemGroup>
 
