--- a/src/services/Gcp.PubSub.Poc.Application/Gcp.PubSub.Poc.Application.csproj
+++ b/src/services/Gcp.PubSub.Poc.Application/Gcp.PubSub.Poc.Application.csproj
@@ -11,6 +11,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <PackageReference Include="Google.Cloud.PubSub.V1" Version="3.27.0" />
       <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.8" />
       <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="9.0.8" />
     </ItemGroup>
