--- a/src/services/Gcp.PubSub.Poc.Infrastructure/Gcp.PubSub.Poc.Infrastructure.csproj
+++ b/src/services/Gcp.PubSub.Poc.Infrastructure/Gcp.PubSub.Poc.Infrastructure.csproj
@@ -7,6 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="Google.Cloud.PubSub.V1" Version="3.27.0" />
       <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="9.0.8" />
       <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="9.0.8" />
     </ItemGroup>
