--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,4 +1,23 @@
 services:
+  seq:
+    image: gcp-emulators/seq:2024.1
+    build:
+      context: ./src/infra/seq/
+      dockerfile: Dockerfile
+    restart: always
+    volumes:
+      - seq-data:/data
+    environment:
+      - ACCEPT_EULA=Y
+    networks:
+      - default
+    expose:
+      - 80
+      - 5341
+    ports:
+      - ${SEQ_UI_PORT}:80
+      - ${SEQ_INGESTION_PORT}:5341
+
   gcp-emulators:
     image: gcp-emulators:535.0.0-emulators
     build:
@@ -18,6 +37,7 @@ services:
       - 8085:8085
 
 volumes:
+  seq-data:
   gcp-emulators-config:
   gcp-emulators-certs:
 
