fix: 新增 PublisherA

--- a/src/services/Gcp.PubSub.Poc.Worker/Gcp.PubSub.Poc.Worker.csproj
+++ b/src/services/Gcp.PubSub.Poc.Worker/Gcp.PubSub.Poc.Worker.csproj
@@ -29,4 +29,16 @@
       <ProjectReference Include="..\Gcp.PubSub.Poc.Infrastructure\Gcp.PubSub.Poc.Infrastructure.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <None Update="Properties\launchSettings.json">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
+      <None Update="appsettings.json">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
+      <None Update="appsettings.Local.json">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
+    </ItemGroup>
+
 </Project>
