--- a/src/services/Gcp.PubSub.Poc.Application/Gcp.PubSub.Poc.Application.csproj
+++ b/src/services/Gcp.PubSub.Poc.Application/Gcp.PubSub.Poc.Application.csproj
@@ -16,4 +16,8 @@
       <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="9.0.8" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Handlers\" />
+    </ItemGroup>
+
 </Project>
