--- a/src/services/Gcp.PubSub.Poc.Producer/Properties/launchSettings.json
+++ b/src/services/Gcp.PubSub.Poc.Producer/Properties/launchSettings.json
@@ -4,11 +4,7 @@
     "Gcp.PubSub.Poc.Producer": {
       "commandName": "Project",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Local",
-        "PUBSUB_EMULATOR_HOST": "localhost:8085",
-        "PUBSUB_PROJECT_ID": "test-project",
-        "PUBSUB_TOPIC_ID": "test-topic",
-        "PUBSUB_SUBSCRIPTION_ID": "test-subscription"
+        "ASPNETCORE_ENVIRONMENT": "Local"
       }
     }
   }
