--- a/src/services/Gcp.PubSub.Poc.Worker/appsettings.Local.json
+++ b/src/services/Gcp.PubSub.Poc.Worker/appsettings.Local.json
@@ -12,7 +12,17 @@
   },
   "Gcp": {
     "PubSub": {
-      "Emulated": true
+      "Emulated": true,
+      "Host": "localhost:8085"
+    }
+  },
+  "Queues": {
+    "Worker": {
+      "PublisherA": {
+        "ProjectId": "test-project",
+        "TopicId": "test-topic",
+        "SubscriptionId": "test-subscription"
+      }
     }
   }
 }
