fix: 新增 SubscriberA

--- a/src/services/Gcp.PubSub.Poc.Worker/appsettings.Local.json
+++ b/src/services/Gcp.PubSub.Poc.Worker/appsettings.Local.json
@@ -22,6 +22,11 @@
         "ProjectId": "test-project",
         "TopicId": "test-topic",
         "SubscriptionId": "test-subscription"
+      },
+      "SubscriberA": {
+        "ProjectId": "test-project",
+        "TopicId": "test-topic",
+        "SubscriptionId": "test-subscription"
       }
     }
   }
