fix: 調整 PubSub Host 存取方式, 修正 SubscriberA 不執行 StopSubscriberAsync

--- a/src/services/Gcp.PubSub.Poc.Worker/Properties/launchSettings.json
+++ b/src/services/Gcp.PubSub.Poc.Worker/Properties/launchSettings.json
@@ -5,21 +5,24 @@
       "commandLineArgs": "-j 1",
       "commandName": "Project",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Local"
+        "ASPNETCORE_ENVIRONMENT": "Local",
+        "PUBSUB_EMULATOR_HOST": "localhost:8085"
       }
     },
     "Gcp.PubSub.Poc.PublisherA": {
       "commandLineArgs": "-j 1",
       "commandName": "Project",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Local"
+        "ASPNETCORE_ENVIRONMENT": "Local",
+        "PUBSUB_EMULATOR_HOST": "localhost:8085"
       }
     },
     "Gcp.PubSub.Poc.SubscriberA": {
       "commandLineArgs": "-j 2",
       "commandName": "Project",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Local"
+        "ASPNETCORE_ENVIRONMENT": "Local",
+        "PUBSUB_EMULATOR_HOST": "localhost:8085"
       }
     }
   }
