--- a/src/services/Gcp.PubSub.Poc.Worker/appsettings.Local.json
+++ b/src/services/Gcp.PubSub.Poc.Worker/appsettings.Local.json
@@ -12,8 +12,7 @@
   },
   "Gcp": {
     "PubSub": {
-      "Emulated": true,
-      "Host": "localhost:8085"
+      "Emulated": true
     }
   },
   "Queues": {
