--- a/src/services/Gcp.PubSub.Poc.Worker/appsettings.Local.json
+++ b/src/services/Gcp.PubSub.Poc.Worker/appsettings.Local.json
@@ -18,16 +18,33 @@
   },
   "Queues": {
     "Worker": {
-      "PublisherA": {
+      // one-to-one
+      "PublisherOneToOne": {
         "ProjectId": "test-project",
-        "TopicId": "test-topic",
-        "SubscriptionId": "test-subscription"
+        "TopicId": "one-to-one",
+        "SubscriptionId": "one-to-one-sub"
       },
-      "SubscriberA": {
+      "SubscriberOneToOne": {
         "ProjectId": "test-project",
-        "TopicId": "test-topic",
-        "SubscriptionId": "test-subscription",
+        "TopicId": "one-to-one",
+        "SubscriptionId": "one-to-one-sub",
         "SubscriberAckDeadline": 10
+      },
+      // one-to-many
+      "PublisherOneToMany": {
+        "ProjectId": "test-project",
+        "TopicId": "one-to-many",
+        "SubscriptionId": "one-to-many-sub"
+      },
+      "SubscriberOneToMany1": {
+        "ProjectId": "test-project",
+        "TopicId": "one-to-many",
+        "SubscriptionId": "one-to-many-sub"
+      },
+      "SubscriberOneToMany2": {
+        "ProjectId": "test-project",
+        "TopicId": "one-to-many",
+        "SubscriptionId": "one-to-many-sub"
       }
     }
   }
