--- a/src/services/Gcp.PubSub.Poc.Worker/appsettings.Local.json
+++ b/src/services/Gcp.PubSub.Poc.Worker/appsettings.Local.json
@@ -21,30 +21,38 @@
       // one-to-one
       "PublisherOneToOne": {
         "ProjectId": "test-project",
-        "TopicId": "one-to-one",
-        "SubscriptionId": "one-to-one-sub"
+        "TopicId": "one-to-one"
       },
       "SubscriberOneToOne": {
         "ProjectId": "test-project",
-        "TopicId": "one-to-one",
         "SubscriptionId": "one-to-one-sub",
         "SubscriberAckDeadline": 10
       },
       // one-to-many
       "PublisherOneToMany": {
         "ProjectId": "test-project",
-        "TopicId": "one-to-many",
-        "SubscriptionId": "one-to-many-sub"
+        "TopicId": "one-to-many"
       },
       "SubscriberOneToMany1": {
         "ProjectId": "test-project",
-        "TopicId": "one-to-many",
         "SubscriptionId": "one-to-many-sub"
       },
       "SubscriberOneToMany2": {
         "ProjectId": "test-project",
-        "TopicId": "one-to-many",
         "SubscriptionId": "one-to-many-sub"
+      },
+      // filter-by-attribute
+      "PublisherFilterByAttribute": {
+        "ProjectId": "test-project",
+        "TopicId": "filter-by-attribute"
+      },
+      "SubscriberFilterByAttributeDog": {
+        "ProjectId": "test-project",
+        "SubscriptionId": "filter-by-attribute-sub-dog"
+      },
+      "SubscriberFilterByAttributeCat": {
+        "ProjectId": "test-project",
+        "SubscriptionId": "filter-by-attribute-sub-cat"
       }
     }
   }
