--- a/src/services/Gcp.PubSub.Poc.Worker/appsettings.Local.json
+++ b/src/services/Gcp.PubSub.Poc.Worker/appsettings.Local.json
@@ -13,6 +13,7 @@
   "Gcp": {
     "PubSub": {
       "Emulated": true,
+      "EmulatorHost": "localhost:8085",
       "SubscriberAckDeadline": 60
     }
   },
