fix: 加上讀取 GCP secret 邏輯

--- a/src/services/Gcp.PubSub.Poc.Worker/appsettings.Local.json
+++ b/src/services/Gcp.PubSub.Poc.Worker/appsettings.Local.json
@@ -14,7 +14,8 @@
     "PubSub": {
       "Emulated": true,
       "EmulatorHost": "localhost:8085",
-      "DefaultAckDeadline": 60
+      "DefaultAckDeadline": 60,
+      "Secret": ""
     }
   },
   "Queues": {
